# global-demand-forecasting-platform

./: .dockerignore  .env.example  .gitignore  LICENSE.txt  Makefile  README.md  dag_processing_logs.txt  docker-compose.airflow.yml  docker-compose.yml  project-tree-clean.txt  pyproject.toml  requirements-alembic.txt  requirements-dashboard.txt  requirements-dbt.txt  requirements-streamlit.txt  requirements.txt
.build/mwaa/: pyproject.toml  requirements.txt
.build/mwaa/audit_log/: dq_audit_logger.py
.build/mwaa/dags/: 01_minimal_test.py  10_m5_full_refresh.py  10_m5_full_refresh_mwaa.py
.build/mwaa/database/: database.py
.build/mwaa/gdf/: database.py  ingestion.py
.build/mwaa/ingestion/: kaggle_client.py  m5_ingestion.py  s3_client.py
.build/mwaa/quality/: run_calendar_dq.py  run_sales_train_validation_dq.py  run_sell_prices_dq.py
.build/mwaa/warehouse/.dbt/: .user.yml
.build/mwaa/warehouse/macros/: list_schemas.sql
.build/mwaa/warehouse/models/: staging_sources.yml
.build/mwaa/warehouse/models/gold/: gold_m5_training_daily.sql
.build/mwaa/warehouse/models/silver/: silver_m5_sales_with_prices.sql
.github/workflows/: ci.yml  dev-aws-auth.yml  dev-db-migrate.yml  dev-deploy-mwaa.yml  pipeline.yml  (+5 more)
.venv-dbt/: pyvenv.cfg
alembic/: env.py
app_config/: config.py
audit_log/: ingestion_audit_logger.py
config/: config.py
dashboard/: README.md  SERVING_LAYER_SPEC.md  app.py
database/: database.py  main.py  models.py  schemas.py
docs/: 00_project_local_setup.md  01_local_platform_setup.md  aws_ml_runtime_plan.md  aws_warehouse_deployment_checklist.md  data-platform.md  developer-quickstart.md  ecs_ml_jobs_plan.md  infrastructure.md  ml-platform.md  ml_system_production_plan.md
forecast_app/: app.py  direct_warehouse_read_app.py  requirements.txt  settings.py
gdf/: __init__.py  audit_log.py  quality.py  warehouse.py
ingestion/: audit_logger.py  bronze_io.py  ingestion_queries.py  kaggle_client.py  m5_ingestion.py  s3_client.py
notebooks/: 01_problem_framing_and_data_contract.ipynb  02_eda_and_data_quality_for_modeling.ipynb  03_feature_engineering_and_baseline_models.ipynb  04_advanced_model_candidate.ipynb  05_full_data_backtesting_and_model_selection_plan.ipynb
quality/: run_calendar_dq.py  run_macro_series_dq.py  run_sales_train_validation_dq.py  run_sell_prices_dq.py  run_trends_interest_over_time_dq.py  run_weather_daily_dq.py
scripts/: export_dashboard_feature_mart.py  secret_scan.sh
training/: config.py  dataset.py  evaluate.py  features.py  mlflow_utils.py  runtime_cli.py  train_random_forest.py
warehouse/: dbt_project.yml
(+394 files in other folders)
